--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
             <div class="square3_2">2</div>
             <div class="square3_3">3</div>
             <div class="square3_4">4</div>
+            <div class="clearfix"></div>
         </div>
         <div class="clearfix">
         </div>
@@ -234,6 +235,7 @@
         <div class="container3_01">
             <div class="square5_1">3</div>
             <div class="square5_2">4</div>
+            <div class="clearfix"></div>
         </div>
         <div class="clearfix"></div>
     </div>
